--- a/DuplicatedApps/DuplicatedApps/Controller/HomeScreen/ListApps/CustomListView.xib
+++ b/DuplicatedApps/DuplicatedApps/Controller/HomeScreen/ListApps/CustomListView.xib
@@ -1,66 +1,81 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomListView" customModule="DuplicatedApps" customModuleProvider="target">
             <connections>
-                <outlet property="contentView" destination="iN0-l3-epB" id="KHQ-IW-slr"/>
-                <outlet property="listView" destination="jdn-6z-lWT" id="2Z2-C4-JcS"/>
+                <outlet property="appDescriptionView" destination="ESG-Up-KDj" id="EWn-qg-ePh"/>
+                <outlet property="containerView" destination="DTW-YS-Naj" id="qhi-dq-EXX"/>
+                <outlet property="contentView" destination="iN0-l3-epB" id="S6o-BS-LYX"/>
+                <outlet property="listAppsTableView" destination="73L-gY-QXg" id="bee-oc-dQ1"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="616" height="969"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ahN-uO-MJf">
-                    <rect key="frame" x="293" y="929" width="30" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="30" id="9Ry-Fx-lFy"/>
-                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="IPA-dy-RxW"/>
-                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="N1F-4P-YJU"/>
-                        <constraint firstAttribute="height" constant="30" id="ug9-cX-6Iy"/>
-                    </constraints>
-                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                    <state key="normal" image="dismiss-button"/>
-                    <connections>
-                        <action selector="doClose:" destination="-1" eventType="touchUpInside" id="q3x-tK-72J"/>
-                    </connections>
-                </button>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="65" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="jdn-6z-lWT">
-                    <rect key="frame" x="0.0" y="0.0" width="616" height="869"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DTW-YS-Naj">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                    <subviews>
+                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="73L-gY-QXg">
+                            <rect key="frame" x="25" y="40" width="364" height="772"/>
+                            <color key="backgroundColor" red="1" green="1" blue="0.99215686274509807" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="sectionIndexBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="sectionIndexTrackingBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </tableView>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y1x-Wt-SLX">
+                            <rect key="frame" x="188.5" y="837" width="37" height="37"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="37" id="Udp-0D-bQz"/>
+                                <constraint firstAttribute="height" constant="37" id="yUv-Pp-CbG"/>
+                            </constraints>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" image="dismiss-button"/>
+                            <connections>
+                                <action selector="didTapCloseListViewAction:" destination="-1" eventType="touchUpInside" id="DiJ-lP-rBX"/>
+                            </connections>
+                        </button>
+                    </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <connections>
-                        <outlet property="dataSource" destination="-1" id="gzv-tq-fFU"/>
-                        <outlet property="delegate" destination="-1" id="c96-yN-foA"/>
-                    </connections>
-                </tableView>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="Y1x-Wt-SLX" secondAttribute="bottom" constant="22" id="6B1-CQ-RIM"/>
+                        <constraint firstAttribute="trailing" secondItem="73L-gY-QXg" secondAttribute="trailing" constant="25" id="LTt-83-hvs"/>
+                        <constraint firstItem="Y1x-Wt-SLX" firstAttribute="top" secondItem="73L-gY-QXg" secondAttribute="bottom" constant="25" id="ObN-1n-Hg0"/>
+                        <constraint firstItem="73L-gY-QXg" firstAttribute="leading" secondItem="DTW-YS-Naj" secondAttribute="leading" constant="25" id="WQi-Yg-itW"/>
+                        <constraint firstItem="73L-gY-QXg" firstAttribute="top" secondItem="DTW-YS-Naj" secondAttribute="top" constant="40" id="lrb-nd-gOI"/>
+                        <constraint firstItem="Y1x-Wt-SLX" firstAttribute="centerX" secondItem="DTW-YS-Naj" secondAttribute="centerX" id="sOs-fN-F6i"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ESG-Up-KDj">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="jdn-6z-lWT" secondAttribute="trailing" id="6V4-iu-fsd"/>
-                <constraint firstItem="jdn-6z-lWT" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="c8T-1M-qVC"/>
-                <constraint firstItem="jdn-6z-lWT" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="dYZ-YL-mXy"/>
-                <constraint firstItem="ahN-uO-MJf" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="dlE-qa-wxu"/>
-                <constraint firstItem="ahN-uO-MJf" firstAttribute="top" secondItem="jdn-6z-lWT" secondAttribute="bottom" constant="60" id="gBG-2q-fb6"/>
-                <constraint firstAttribute="bottom" secondItem="ahN-uO-MJf" secondAttribute="bottom" constant="10" id="vCi-Pg-jZ4"/>
+                <constraint firstAttribute="bottom" secondItem="ESG-Up-KDj" secondAttribute="bottom" id="3Eo-Gu-mJs"/>
+                <constraint firstItem="ESG-Up-KDj" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="7pJ-lU-U2s"/>
+                <constraint firstItem="DTW-YS-Naj" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="MMg-Xs-mdt"/>
+                <constraint firstItem="ESG-Up-KDj" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="Vfh-Xm-68D"/>
+                <constraint firstItem="ESG-Up-KDj" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Yiq-dU-CzX"/>
+                <constraint firstItem="DTW-YS-Naj" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="Zgh-Xz-9CR"/>
+                <constraint firstAttribute="bottom" secondItem="DTW-YS-Naj" secondAttribute="bottom" id="jrD-bt-v2V"/>
+                <constraint firstItem="DTW-YS-Naj" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="vyg-Xf-0Fo"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="348.09160305343511" y="-21.47887323943662"/>
+            <point key="canvasLocation" x="224.63768115942031" y="-31.473214285714285"/>
         </view>
     </objects>
     <resources>
         <image name="dismiss-button" width="37" height="37"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
