--- a/DuplicatedApps/DuplicatedApps/Controller/HomeScreen/AppsDescription/AppDescriptionView.xib
+++ b/DuplicatedApps/DuplicatedApps/Controller/HomeScreen/AppsDescription/AppDescriptionView.xib
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -17,8 +16,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AppDescriptionView" customModule="DuplicatedApps" customModuleProvider="target">
             <connections>
                 <outlet property="containerView" destination="wVQ-5f-kqY" id="uL3-wm-aup"/>
-                <outlet property="contentView" destination="i5M-Pr-FkT" id="rFq-57-AZc"/>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="contentView" destination="i5M-Pr-FkT" id="ZvL-EY-YMF"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -49,22 +47,34 @@
                                 <constraint firstAttribute="height" constant="2" id="CD2-T0-SzV"/>
                             </constraints>
                         </view>
+                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5W4-xd-poV">
+                            <rect key="frame" x="30" y="140" width="333" height="162"/>
+                            <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="162" id="G5D-Wb-n7c"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="KLy-cF-OEZ" firstAttribute="top" secondItem="wVQ-5f-kqY" secondAttribute="top" constant="52" id="0EH-TO-4wi"/>
+                        <constraint firstItem="5W4-xd-poV" firstAttribute="leading" secondItem="wVQ-5f-kqY" secondAttribute="leading" constant="30" id="Ake-co-zLk"/>
                         <constraint firstItem="1a5-TX-fbp" firstAttribute="top" secondItem="KLy-cF-OEZ" secondAttribute="bottom" constant="19" id="JJw-Zq-862"/>
                         <constraint firstAttribute="trailing" secondItem="wdV-DU-XSb" secondAttribute="trailing" constant="14" id="LQ9-A6-Ocw"/>
+                        <constraint firstItem="5W4-xd-poV" firstAttribute="top" secondItem="1a5-TX-fbp" secondAttribute="bottom" constant="26" id="OPR-wI-nBG"/>
                         <constraint firstAttribute="trailing" secondItem="1a5-TX-fbp" secondAttribute="trailing" constant="30" id="XIw-TD-5oH"/>
                         <constraint firstItem="wdV-DU-XSb" firstAttribute="centerY" secondItem="KLy-cF-OEZ" secondAttribute="centerY" id="h6P-43-X1S"/>
                         <constraint firstItem="wdV-DU-XSb" firstAttribute="leading" secondItem="KLy-cF-OEZ" secondAttribute="trailing" constant="14" id="ivr-1d-20J"/>
                         <constraint firstItem="1a5-TX-fbp" firstAttribute="leading" secondItem="wVQ-5f-kqY" secondAttribute="leading" constant="30" id="j1F-ph-WCg"/>
+                        <constraint firstAttribute="trailing" secondItem="5W4-xd-poV" secondAttribute="trailing" constant="30" id="ryM-IG-u4U"/>
                         <constraint firstItem="KLy-cF-OEZ" firstAttribute="leading" secondItem="wVQ-5f-kqY" secondAttribute="leading" constant="41" id="yVm-Qi-pPg"/>
                     </constraints>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="wVQ-5f-kqY" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="0kx-Xj-mKZ"/>
                 <constraint firstItem="wVQ-5f-kqY" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="5n2-VE-Ovh"/>
@@ -74,19 +84,8 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="119.84732824427481" y="20.422535211267608"/>
         </view>
-        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FE Developer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="fd9-RI-qjz">
-            <rect key="frame" x="0.0" y="0.0" width="101" height="21"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-            <nil key="textColor"/>
-            <nil key="highlightedColor"/>
-            <point key="canvasLocation" x="674" y="-78"/>
-        </label>
     </objects>
     <resources>
         <image name="facebook-lite-icon" width="41" height="41"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
