--- a/DuplicatedApps/DuplicatedApps/Controller/HomeScreen/AppsDescription/AppDescriptionView.xib
+++ b/DuplicatedApps/DuplicatedApps/Controller/HomeScreen/AppsDescription/AppDescriptionView.xib
@@ -15,8 +15,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AppDescriptionView" customModule="DuplicatedApps" customModuleProvider="target">
             <connections>
+                <outlet property="appIconImage" destination="KLy-cF-OEZ" id="ZPM-im-tYw"/>
+                <outlet property="appNameLabel" destination="wdV-DU-XSb" id="SIc-8B-xnJ"/>
                 <outlet property="containerView" destination="wVQ-5f-kqY" id="uL3-wm-aup"/>
                 <outlet property="contentView" destination="i5M-Pr-FkT" id="ZvL-EY-YMF"/>
+                <outlet property="descriptionTextField" destination="5W4-xd-poV" id="yyP-1o-Bde"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -28,27 +31,27 @@
                     <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="facebook-lite-icon" translatesAutoresizingMaskIntoConstraints="NO" id="KLy-cF-OEZ">
-                            <rect key="frame" x="41" y="52" width="41" height="41"/>
+                            <rect key="frame" x="41" y="45" width="41" height="41"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="41" id="QKR-CG-6yS"/>
                                 <constraint firstAttribute="width" constant="41" id="VNF-aU-pdi"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FE Developer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wdV-DU-XSb">
-                            <rect key="frame" x="96" y="62.666666666666657" width="283" height="20"/>
+                            <rect key="frame" x="96" y="55.666666666666657" width="283" height="20"/>
                             <fontDescription key="fontDescription" name="Inter-MediumItalic" family="Inter" pointSize="17"/>
                             <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1a5-TX-fbp">
-                            <rect key="frame" x="30" y="112" width="333" height="2"/>
+                            <rect key="frame" x="35" y="98" width="323" height="2"/>
                             <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="2" id="CD2-T0-SzV"/>
                             </constraints>
                         </view>
                         <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5W4-xd-poV">
-                            <rect key="frame" x="30" y="140" width="333" height="162"/>
+                            <rect key="frame" x="30" y="126" width="333" height="162"/>
                             <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="162" id="G5D-Wb-n7c"/>
@@ -56,25 +59,50 @@
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hk3-Vq-wZu">
+                            <rect key="frame" x="178" y="793" width="37" height="37"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="37" id="mf6-5Y-kxP"/>
+                                <constraint firstAttribute="width" constant="37" id="xvg-C4-3JF"/>
+                            </constraints>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" image="dismiss-button"/>
+                            <connections>
+                                <action selector="didTapCloseAppDesriptionView:" destination="-1" eventType="touchUpInside" id="UMf-1L-KMd"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DIg-KN-Jml">
+                            <rect key="frame" x="175" y="727" width="43" height="31"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="31" id="1Qh-Zm-0oy"/>
+                                <constraint firstAttribute="width" constant="43" id="keT-PW-WeB"/>
+                            </constraints>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" image="success-button"/>
+                        </button>
                     </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="KLy-cF-OEZ" firstAttribute="top" secondItem="wVQ-5f-kqY" secondAttribute="top" constant="52" id="0EH-TO-4wi"/>
+                        <constraint firstItem="KLy-cF-OEZ" firstAttribute="top" secondItem="wVQ-5f-kqY" secondAttribute="top" constant="45" id="0EH-TO-4wi"/>
                         <constraint firstItem="5W4-xd-poV" firstAttribute="leading" secondItem="wVQ-5f-kqY" secondAttribute="leading" constant="30" id="Ake-co-zLk"/>
-                        <constraint firstItem="1a5-TX-fbp" firstAttribute="top" secondItem="KLy-cF-OEZ" secondAttribute="bottom" constant="19" id="JJw-Zq-862"/>
+                        <constraint firstItem="1a5-TX-fbp" firstAttribute="top" secondItem="KLy-cF-OEZ" secondAttribute="bottom" constant="12" id="JJw-Zq-862"/>
                         <constraint firstAttribute="trailing" secondItem="wdV-DU-XSb" secondAttribute="trailing" constant="14" id="LQ9-A6-Ocw"/>
                         <constraint firstItem="5W4-xd-poV" firstAttribute="top" secondItem="1a5-TX-fbp" secondAttribute="bottom" constant="26" id="OPR-wI-nBG"/>
-                        <constraint firstAttribute="trailing" secondItem="1a5-TX-fbp" secondAttribute="trailing" constant="30" id="XIw-TD-5oH"/>
+                        <constraint firstAttribute="bottom" secondItem="hk3-Vq-wZu" secondAttribute="bottom" constant="22" id="UCw-ZX-THA"/>
+                        <constraint firstItem="DIg-KN-Jml" firstAttribute="centerX" secondItem="hk3-Vq-wZu" secondAttribute="centerX" id="UdU-Ge-gRH"/>
+                        <constraint firstAttribute="trailing" secondItem="1a5-TX-fbp" secondAttribute="trailing" constant="35" id="XIw-TD-5oH"/>
+                        <constraint firstItem="hk3-Vq-wZu" firstAttribute="top" secondItem="DIg-KN-Jml" secondAttribute="bottom" constant="35" id="cdP-Ii-hKl"/>
                         <constraint firstItem="wdV-DU-XSb" firstAttribute="centerY" secondItem="KLy-cF-OEZ" secondAttribute="centerY" id="h6P-43-X1S"/>
                         <constraint firstItem="wdV-DU-XSb" firstAttribute="leading" secondItem="KLy-cF-OEZ" secondAttribute="trailing" constant="14" id="ivr-1d-20J"/>
-                        <constraint firstItem="1a5-TX-fbp" firstAttribute="leading" secondItem="wVQ-5f-kqY" secondAttribute="leading" constant="30" id="j1F-ph-WCg"/>
+                        <constraint firstItem="1a5-TX-fbp" firstAttribute="leading" secondItem="wVQ-5f-kqY" secondAttribute="leading" constant="35" id="j1F-ph-WCg"/>
                         <constraint firstAttribute="trailing" secondItem="5W4-xd-poV" secondAttribute="trailing" constant="30" id="ryM-IG-u4U"/>
+                        <constraint firstItem="hk3-Vq-wZu" firstAttribute="centerX" secondItem="wVQ-5f-kqY" secondAttribute="centerX" id="xaG-Pr-IaH"/>
                         <constraint firstItem="KLy-cF-OEZ" firstAttribute="leading" secondItem="wVQ-5f-kqY" secondAttribute="leading" constant="41" id="yVm-Qi-pPg"/>
                     </constraints>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="wVQ-5f-kqY" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="0kx-Xj-mKZ"/>
                 <constraint firstItem="wVQ-5f-kqY" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="5n2-VE-Ovh"/>
@@ -86,6 +114,8 @@
         </view>
     </objects>
     <resources>
+        <image name="dismiss-button" width="37" height="37"/>
         <image name="facebook-lite-icon" width="41" height="41"/>
+        <image name="success-button" width="46" height="34"/>
     </resources>
 </document>
