--- a/DuplicatedApps/DuplicatedApps/Controller/HomeScreen/MostPopularApps/cell/MostPopularAppsCollectionViewCell.xib
+++ b/DuplicatedApps/DuplicatedApps/Controller/HomeScreen/MostPopularApps/cell/MostPopularAppsCollectionViewCell.xib
@@ -28,7 +28,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wDW-Q1-FUb">
                                 <rect key="frame" x="11" y="11" width="50" height="50"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home-screen-google-icon" translatesAutoresizingMaskIntoConstraints="NO" id="e5j-3N-rZ0">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="google-mostapp-icon" translatesAutoresizingMaskIntoConstraints="NO" id="e5j-3N-rZ0">
                                         <rect key="frame" x="6.6666666666666679" y="6.6666666666666679" width="36.666666666666657" height="36.666666666666657"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="36.5" id="f7e-hp-fON"/>
@@ -79,6 +79,6 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="home-screen-google-icon" width="30" height="30"/>
+        <image name="google-mostapp-icon" width="30" height="30"/>
     </resources>
 </document>
